tests/type-check/bad/raw-array.arr

a = {
    make: lam(b :: RawArray<Number>):
        b
    end
}

c :: RawArray<Number> = [a: 1, 2, 3, 4, 5, "hello"]
